@@ -21,9 +21,8 @@ EXTRA_DIST = $(sgml_docs) $(html_docs)
 
 if MAKE_DOC
 doc_DATA = $(sgml_docs) $(html_docs)
-CLEANFILES = $(html_docs) *.*~
+CLEANFILES = $(html_docs) *~
 else
 doc_DATA = $(sgml_docs)
-CLEANFILES=*.*~
+CLEANFILES=*~
 endif
-
